Bug 15914 - winbind can crash at startup
Summary: winbind can crash at startup
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.23.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-12 16:29 UTC by Volker Lendecke
Modified: 2025-09-26 13:52 UTC (History)
1 user (show)

See Also:


Attachments
patch (2.50 KB, patch)
2025-09-13 07:03 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2025-09-12 16:29:13 UTC
Bug 14678 is back, allocating new bug number
Comment 2 Samba QA Contact 2025-09-13 05:45:03 UTC
This bug was referenced in samba master:

beaf661b1ec1f048efc8eb2b383fc989a79ae009
Comment 3 Volker Lendecke 2025-09-13 07:03:07 UTC
Created attachment 18724 [details]
patch
Comment 4 Ralph Böhme 2025-09-13 07:16:09 UTC
Reassigning to Jule for inclusion in 4.23.
Comment 5 Jule Anger 2025-09-17 07:43:06 UTC
Pushed to autobuild-v4-23-test.
Comment 6 Samba QA Contact 2025-09-17 08:49:11 UTC
This bug was referenced in samba v4-23-test:

babc0c7cb6094459ebb9ba1a722136889601b0ca
Comment 7 Jule Anger 2025-09-25 12:06:33 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2025-09-26 13:52:09 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.1):

babc0c7cb6094459ebb9ba1a722136889601b0ca